[package]
name = "engine"
version = "0.1.0"
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]
edition = "2018"

[dependencies]
google-people1 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"
snafu = "^0.6.2"
strsim = "0.9.3"

